# shepatra

./: .gitignore  Pipfile  README.jp.md  README.md  build_exe_with_pyinstaller.ps1  pyproject.toml
specifications/: func.md
src/: config.json  recipes.json  shepatra.py  shepatra_cli.py  shepatra_core.py  shepatra_gui.py
src/i18n/: en.json  ja.json
src/i18n/gui/: ja.json
src/scripts/: utils.py
tests/: test_shepatra.py  test_shepatra_core.py
