[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shepatra"
version = "0.3.0"
dependencies = ["click", "pyperclip", "blake", "flet"]
requires-python = ">=3.10.8"

# [project.optional-dependencies]
# dev = ["click",]

[project.entry-points.pyinstaller40]
hook-dirs = "shepatra.__pyinstaller:get_hook_dirs"
# tests = "auraboros.__pyinstaller:get_PyInstaller_tests"
